--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header id="top">
-            <h1>Min Musik Hemsida</h1>
+            <h1>Min Egen Musik Hemsida</h1>
         </header>
         <main class="container" id="middle">
             <section class="about-me">
