--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </header>
         <main class="container" id="middle">
             <section class="about-me">
-                <h3>Hej, jag heter Ikhlaq</h3>
+                <h3>Hej, Jag heter Ikhlaq</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore ipsa ex, cum ipsum earum veritatis sed magni tenetur quas alias! Incidunt delectus perspiciatis culpa illum placeat voluptatum. Soluta, nobis?</p>
             </section>
             <section class="my-music">
