--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <main class="container" id="middle">
             <section class="about-me">
                 <h3>Hej, Jag heter Ikhlaq</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore ipsa ex, cum ipsum earum veritatis sed magni tenetur quas alias! Incidunt delectus perspiciatis culpa illum placeat voluptatum. Soluta, nobis?</p>
+                <p>Lorem, ipsum  dolor sit amet consectetur adipisicing elit. Omnis inventore ipsa ex, cum ipsum earum veritatis sed magni tenetur quas alias! Incidunt delectus perspiciatis culpa illum placeat voluptatum. Soluta, nobis?</p>
             </section>
             <section class="my-music">
                 <h3>My Songs</h3>
                 <ul class="music-listing">
                     <li><p>Times are a changing - 2.30</p></li>
-                    <li><p>Sweet Summer - 4.50</p></li>
+                    <li><p>Sweet blue Summer - 4.50</p></li>
                     <li><p>Snow - 1.30</p></li>
                 </ul>
             </section>
